Introduce Virtual Study Aware repository layer
Implement getting all sample ids by sample list of Virtual Study

Make sample and patient id setting conditional

Molecular profile mapping. Start with virtualizing discrete CNA service

Virtualise mutation repository

Virtualise structural variant repository

Virtualise copy number segment repository

Make copy number alteration section to show

virtualise molecular data service

Make MolecularDataService work with external ids

So we can virtualise them easily

Add TODOs for possible candidates for virtualization

Virtualise Variant Counts Repository

Add TODOs for remaining repositories to virtualise

Compute virtual SAMPLE_ID for timeline attribute

to pull more sample attriubute for timeline event

Remove repo methods that use internal ids

To be safe. Virtualised repos could not implement them

Write down remaining TODOs

Add readme with TODOs and known issues

Update TODOs list on the VS AuthZ README

Implement and clean unsupported methods in gene panel repository

Implement missign methods for mutation repository